--- a/ITBees.Translations/ITBees.Translations.csproj
+++ b/ITBees.Translations/ITBees.Translations.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="FAS\" />
+    <Folder Include="SqlMigration\" />
   </ItemGroup>
 
   <ItemGroup>
