--- a/ITBees.Translations/ITBees.Translations.csproj
+++ b/ITBees.Translations/ITBees.Translations.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="ITBees.BaseServices" Version="5.0.19" />
     <PackageReference Include="ITBees.Models" Version="5.0.16" />
     <PackageReference Include="ITBeesPL.InheritedMapper" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
