--- a/ITBees.Translations/ITBees.Translations.csproj
+++ b/ITBees.Translations/ITBees.Translations.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="ITBees.BaseServices" Version="8.0.28" />
+    <PackageReference Include="ITBees.ChatGpt" Version="8.0.4" />
     <PackageReference Include="ITBees.Models" Version="8.0.44" />
     <PackageReference Include="ITBeesPL.InheritedMapper" Version="8.0.15" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
