--- a/ITBees.Translations/ITBees.Translations.csproj
+++ b/ITBees.Translations/ITBees.Translations.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="ITBees.ChatGpt" Version="8.0.5" />
     <PackageReference Include="ITBees.Models" Version="8.0.47" />
     <PackageReference Include="ITBeesPL.InheritedMapper" Version="8.0.15" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
