--- a/ITBees.Translations/ITBees.Translations.csproj
+++ b/ITBees.Translations/ITBees.Translations.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <Folder Include="SqlMigration\" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="ITBees.BaseServices" Version="8.0.57" />
     <PackageReference Include="ITBees.ChatGpt" Version="8.0.8" />
@@ -19,4 +19,14 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+<!--  <ItemGroup>-->
+<!--    <ProjectReference Include="..\..\ITBees.BaseServices\ITBees.BaseServices\ITBees.BaseServices.csproj" />-->
+<!--    <ProjectReference Include="..\..\ITBees.ChatGpt\ITBees.ChatGpt\ITBees.ChatGpt.csproj" />-->
+<!--    <ProjectReference Include="..\..\ITBees.Models\ITBees.Models\ITBees.Models.csproj" />-->
+<!--    <ProjectReference Include="..\..\InheritedMapper\InheritedMapper\InheritedMapper.csproj" />-->
+<!--    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />-->
+<!--    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />-->
+<!--    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />-->
+<!--  </ItemGroup>-->
+  
 </Project>
