Update package references to latest versions for improved functionality and compatibility

--- a/ITBees.Translations/ITBees.Translations.csproj
+++ b/ITBees.Translations/ITBees.Translations.csproj
@@ -12,10 +12,10 @@
   <ItemGroup>
     <PackageReference Include="ITBees.BaseServices" Version="8.0.72" />
     <PackageReference Include="ITBees.ChatGpt" Version="8.0.21" />
-    <PackageReference Include="ITBees.Models" Version="8.0.82" />
+    <PackageReference Include="ITBees.Models" Version="8.0.83" />
     <PackageReference Include="ITBeesPL.InheritedMapper" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
