--- a/ITBees.Translations/ITBees.Translations.csproj
+++ b/ITBees.Translations/ITBees.Translations.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="ITBees.ChatGpt" Version="8.0.27" />
     <PackageReference Include="ITBees.Models" Version="8.0.85" />
+    <PackageReference Include="ITBees.BaseServices" Version="8.0.76" />
     <PackageReference Include="ITBeesPL.InheritedMapper" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
